--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/png" href="/pom-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PomTime</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LKRB2MT3FZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){ dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
   </head>
   <body>
     <div id="root"></div>
