--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){ dataLayer.push(arguments); }
       gtag('js', new Date());
-      gtag('config', 'G-XXXXXXXXXX');
+      gtag('config', 'G-LKRB2MT3FZ');
     </script>
   </head>
   <body>
